# cis194

./: cis194.cabal
.stack-work/install/x86_64-linux/lts-8.18/8.0.2/doc/cis194-0.1.0.0/: LICENSE
.stack-work/install/x86_64-linux/lts-8.18/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  QuickCheck-2.9.2-Jyj4gc4JxkEIgGFLAsGhs9  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  cis194-0.1.0.0-7fN4zIVbQFO2tQ8BrNNVMb  hspec-2.4.3-1FDnT5qa4j3Kk2ZAmhP9xh  hspec-core-2.4.3-4aSW6vl2zjIEbOOJG9KdQp  hspec-discover-2.4.3-CG2f3yt4qi61oj48M1aJup  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  primitive-0.6.1.0-6AbSTw9JXz141LE5p6LGH  quickcheck-io-0.1.4-C5t3MfRsr5zrFam5nRAFy  random-1.1-9tceXaeYIMZ4JrKq20Egog  setenv-0.1.1.3-8dEhk6JWvlmCmVyBammSpu  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tf-random-0.5-BGjMgO8m67W8CHiEl15kZ7
.stack-work/install/x86_64-linux/lts-8.18/8.0.2/lib/x86_64-linux-ghc-8.0.2/cis194-0.1.0.0-7fN4zIVbQFO2tQ8BrNNVMb/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-8.18/8.0.2/pkgdb/: cis194-0.1.0.0-7fN4zIVbQFO2tQ8BrNNVMb.conf  package.cache
src/: AParser2.hs  Lib.hs  Week1.hs  Week10.hs  Week11.hs  Week2.hs  Week3.hs  Week4.hs  Week6.hs  week1.hs
test/: Spec.hs
