name:                cis194
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zach007/cis194#readme
license:             BSD3
license-file:        LICENSE
author:              zach007
maintainer:          zach007cn@gmail.com
copyright:           BSD
category:            Example

extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,Week1,Week2,Log,Week3,Week6
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cis194
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dynamic
  build-depends:       base
                     , cis194
  default-language:    Haskell2010

test-suite cis194-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cis194
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dynamic
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zach007/cis194
